--- a/pages/second.html
+++ b/pages/second.html
@@ -11,7 +11,7 @@
             <img src="logo.png" alt="логотип" class="logo">
         </a>
         <nav class="header-nav">
-            <ul class="nav-list"></ul>
+            <ul class="nav-list">
             <li class="nav-item">
                 <a href="./index.html" class="nav-link">Main</a>
             </li>
@@ -21,13 +21,14 @@
             <li class="nav-item">
                 <a href="./index.html" class="nav-link">Contacts</a>
             </li>
-            <button class="nav-button"><a href="">Log In</a></button>
+            <li><a href="">Log In</a></li>
             <li class="nav-item">
                 <a href="../pages/second.html" class="nav-link">ENG</a>
             </li>
             <li class="nav-item">
                 <a href="./index.html">UA</a>
             </li>
+        </ul>
         </nav>
     </header>
     <main>
@@ -41,21 +42,19 @@
                     your body stays behind to 
                     become part of the People.
                     Fight with us!</h2>
-                    <button class="hero-button">
-                        <a href="">Приєднатися до клану</a>
-                    </button>
+                    <button class="hero-button"></button>
                     <li class="hero-item">
-                        <a href="./img/inst.png" target="_blank" class="hero-link">
+                        <a href="../img/inst.png" target="_blank" class="hero-link">
                             <img src="" alt="інстраграм">
                         </a>
                     </li>
                     <li class="hero-item">
-                        <a href="./img/twitter.png" target="_blank" class="hero-link">
+                        <a href="../img/twitter.png" target="_blank" class="hero-link">
                             <img src="" alt="твітер">
                         </a>
                     </li>
                     <li class="hero-item">
-                        <a href="./img/youtube.png" target="_blank" class="hero-link">
+                        <a href="../img/youtube.png" target="_blank" class="hero-link">
                             <img src="" alt="ютуб">
                         </a>
                     </li>
@@ -65,7 +64,7 @@
                 <h1 class="egle-title">“A LOT OF PEOPLE FROM THE SKY ARE GONNA COME. THEY’RE</h1>
                 <h2 class="egle-title">GONNA COME LIKE A RAIN THAT NEVER ENDS.”</p>
                 <p class="egle-text">JAKE SULLY</p>
-                <img src="./img/egle.png" alt="">
+                <img src="../img/egle.png" alt="">
         </section>
 
         <section class="girl">
@@ -78,7 +77,7 @@
             <h1 class="citata-title">“ALL ENERGY IS ONLY BORROWED, AND ONE DAY</h1>
             <h2 class="citata-title">YOU HAVE TO GIVE IT BACK.”</h2>
             <p class="citata-text">JAKE SULLY</p>
-            <img src="./img/egle.png" alt="">
+            <img src="../img/egle.png" alt="">
         </section>
 
         <section class="navi">
@@ -86,32 +85,32 @@
             <ul class="navi-list">
             <li class="navi-item">
                 <h2 class="navi-caption">Hello</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="../img/egle.png" alt="">
                 <p class="navi-text">Kaltxì</p>
             </li>
             <li class="navi-item">
                 <h2 class="navi-caption">How Are You?</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="../img/egle.png" alt="">
                 <p class="navi-text">Ngaru lu fpom srak?</p>
             </li>
             <li class="navi-item">
                 <h2 class="navi-caption">I'm Well</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="../img/egle.png" alt="">
                 <p class="navi-text">Lu fpom</p>
             </li>
             <li class="navi-item">
                 <h2 class="navi-caption">Thank you</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="../img/egle.png" alt="">
                 <p class="navi-text">Irayo si </p>
             </li>
             <li class="navi-item">
                 <h2 class="navi-caption">I See You</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="../img/egle.png" alt="">
                 <p class="navi-text">Oel ngati kameie</p>
             </li>
             <li class="navi-item">
                 <h2 class="navi-caption">Follow me!</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="../img/egle.png" alt="">
                 <p class="navi-text">Nong oet!</p>
             </li>
             </ul>
@@ -121,11 +120,11 @@
             <h1 class="citata-title">“OUR GREAT MOTHER DOES NOT TAKE SIDES,</h1>
             <h2 class="citata-title">SHE PROTECTS ONLY THE BALANCE OF LIFE.”</h2>
             <p class="citata-text">NEYTIRI</p>
-            <img src="./img/egle.png" alt="">
+            <img src="../img/egle.png" alt="">
         </section>
     </main>
     <footer class="footer">
-        <a href="./img/avatar.png" target="_blank">
+        <a href="../img/avatar.png" target="_blank">
             <img src="logo.png" alt="логотип" class="logo">
         </a>
         <p class="footer-text">Q&A E-mail</p>
