--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avatar</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
+        <div class="container">
         <a href="./img/avatar.png" target="_blank">
             <img src="logo.png" alt="логотип" class="logo">
         </a>
@@ -29,9 +32,11 @@
                 <a href="./index.html">UA</a>
             </li>
         </nav>
+    </div>
     </header>
     <main>
         <section class="hero">
+            <div class="container">
             <h1 class="hero-title">Oe perlltxe hu tsamsiyu!
                 Ngari hu Eywa salew tirea, 
                 tokx 'ì'awn slu Na'viyä hapxì.
@@ -59,6 +64,7 @@
                             <img src="" alt="ютуб">
                         </a>
                     </li>
+                </div>
         </section>
 
         <section class="egle">
