--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avatar</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Headland+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
         <a href="./img/avatar.png" target="_blank">
-            <img src="logo.png" alt="логотип" class="logo">
+            <img src="logo.png" alt="логотип" class="header-logo">
         </a>
         <nav class="header-nav">
             <ul class="nav-list"></ul>
@@ -24,12 +28,12 @@
             <li class="nav-item">
                 <a href="./index.html" class="nav-link">Контакти</a>
             </li>
-            <button class="nav-button"><a href="">Увійти</a></button>
+            <button class="nav-button"><a href="#" class="nav-href">Увійти</a></button>
             <li class="nav-item">
-                <a href="./pages/second.html" class="nav-link">ENG</a>
+                <a href="./pages/second.html" class="language-link">ENG</a>
             </li>
             <li class="nav-item">
-                <a href="./index.html">UA</a>
+                <a href="./index.html" class="language-link">UA</a>
             </li>
         </nav>
     </div>
@@ -47,20 +51,20 @@
                     щоб стати частиною Народу.
                     Борись разом з нами!</h2>
                     <button class="hero-button">
-                        <a href="">Приєднатися до клану</a>
+                        <a href="" class="hero-link">Приєднатися до клану</a>
                     </button>
                     <li class="hero-item">
-                        <a href="./img/inst.png" target="_blank" class="hero-link">
+                        <a href="./img/inst.png" target="_blank" class="hero-instagram">
                             <img src="" alt="інстраграм">
                         </a>
                     </li>
                     <li class="hero-item">
-                        <a href="./img/twitter.png" target="_blank" class="hero-link">
+                        <a href="./img/twitter.png" target="_blank" class="hero-twitter">
                             <img src="" alt="твітер">
                         </a>
                     </li>
                     <li class="hero-item">
-                        <a href="./img/youtube.png" target="_blank" class="hero-link">
+                        <a href="./img/youtube.png" target="_blank" class="hero-youtube">
                             <img src="" alt="ютуб">
                         </a>
                     </li>
@@ -68,66 +72,82 @@
         </section>
 
         <section class="egle">
+            <div class="container">
+                <div class="background">
                 <h1 class="egle-title">“БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ</h1>
                 <h2 class="egle-title">ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.” </p>
                 <p class="egle-text">Джейк Саллі</p>
-                <img src="./img/egle.png" alt="">
+                <img src="./img/egle.png" alt="" class="egle-img">
+            </div>
+            </div>
         </section>
 
         <section class="girl">
+            <div class="container">
+                <div class="girl-background">
             <button type="button" class="girl-button">
                 <a href="" class="girl-link">Дивитись трейлер</a>
             </button>
+        </div>
+        </div>
         </section>
 
         <section class="citata">
+            <div class="container"> 
             <h1 class="citata-title">“ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ</h1>
             <h2 class="citata-title">ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”</h2>
             <p class="citata-text">Нейтірі</p>
-            <img src="./img/egle.png" alt="">
+            <img src="./img/egle.png" alt="" class="egle-img">
+        </div>
         </section>
 
         <section class="navi">
+            <div class="container"> 
+            <div class="background-navi">
             <h1 class="navi-title">Вчимо мову На’ві</h1>
             <ul class="navi-list">
             <li class="navi-item">
                 <h2 class="navi-caption">Привіт</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="./img/egle.png" alt="" class="egle-img">
                 <p class="navi-text">Kaltxì</p>
             </li>
             <li class="navi-item">
                 <h2 class="navi-caption">Як справи?</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="./img/egle.png" alt="" class="egle-img">
                 <p class="navi-text">Ngaru lu fpom srak?</p>
             </li>
             <li class="navi-item">
                 <h2 class="navi-caption">Все добре</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="./img/egle.png" alt="" class="egle-img">
                 <p class="navi-text">Lu fpom</p>
             </li>
             <li class="navi-item">
                 <h2 class="navi-caption">Дякую</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="./img/egle.png" alt="" class="egle-img">
                 <p class="navi-text">Irayo si </p>
             </li>
             <li class="navi-item">
                 <h2 class="navi-caption">Я бачу тебе</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="./img/egle.png" alt="" class="egle-img">
                 <p class="navi-text">Oel ngati kameie</p>
             </li>
             <li class="navi-item">
                 <h2 class="navi-caption">Слідуй за мною!</h2>
-                <img src="./img/egle.png" alt="">
+                <img src="./img/egle.png" alt="" class="egle-img">
                 <p class="navi-text">Nong oet!</p>
             </li>
             </ul>
+        </div>
+        </div>
         </section>
 
         <section class="neytiri">
+            <div class="container">
             <h1 class="citata-title">“НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ,</h1>
             <h2 class="citata-title">ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”</h2>
             <p class="citata-text">Нейтірі</p>
-            <img src="./img/egle.png" alt="">
+            <img src="./img/egle.png" alt="" class="egle-img">
+        </div>
         </section>
     </main>
     <footer class="footer">
