--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
-        <a href="./img/avatar.png" target="_blank">
-            <img src="logo.png" alt="логотип" class="header-logo">
+        <div class="container head-box">
+        <a href="./index.html">
+            <img src="./img/avatar.png" alt="логотип" class="header-logo">
         </a>
         <nav class="header-nav">
-            <ul class="nav-list"></ul>
+            <ul class="nav-list">
             <li class="nav-item">
                 <a href="./index.html" class="nav-link">Головна</a>
             </li>
@@ -35,6 +35,7 @@
             <li class="nav-item">
                 <a href="./index.html" class="language-link">UA</a>
             </li>
+        </ul>
         </nav>
     </div>
     </header>
@@ -51,21 +52,21 @@
                     щоб стати частиною Народу.
                     Борись разом з нами!</h2>
                     <button class="hero-button">
-                        <a href="" class="hero-link">Приєднатися до клану</a>
+                        <a href="#" class="hero-link">Приєднатися до клану</a>
                     </button>
                     <li class="hero-item">
-                        <a href="./img/inst.png" target="_blank" class="hero-instagram">
-                            <img src="" alt="інстраграм">
+                        <a href="#" target="_blank" >
+                            <img src="./img/inst.png" alt="інстраграм" class="hero-instagram">
                         </a>
                     </li>
                     <li class="hero-item">
-                        <a href="./img/twitter.png" target="_blank" class="hero-twitter">
-                            <img src="" alt="твітер">
+                        <a href="#" target="_blank">
+                            <img src="./img/twitter.png" alt="твітер" class="hero-twitter">
                         </a>
                     </li>
                     <li class="hero-item">
-                        <a href="./img/youtube.png" target="_blank" class="hero-youtube">
-                            <img src="" alt="ютуб">
+                        <a href="#" target="_blank">
+                            <img src="./img/youtube.png" alt="ютуб" class="hero-youtube">
                         </a>
                     </li>
                 </div>
