--- a/pages/second.html
+++ b/pages/second.html
@@ -14,8 +14,8 @@
 <body>
     <header class="header">
         <div class="container">
-        <a href="./img/avatar.png" target="_blank">
-            <img src="logo.png" alt="logo" class="header-logo">
+        <a href="../index.html" >
+            <img src="../img/avatar.png" alt="logo" class="header-logo">
         </a>
         <nav class="header-nav">
             <ul class="nav-list">
@@ -56,18 +56,18 @@
                         <a href="" class="hero-link">Join clan</a>
                     </button>
                     <li class="hero-item">
-                        <a href="../img/inst.png" target="_blank" class="hero-instagram">
-                            <img src="#" alt="instagram">
+                        <a href="#" target="_blank">
+                            <img src="../img/inst.png" alt="instagram" class="hero-instagram">
                         </a>
                     </li>
                     <li class="hero-item">
-                        <a href="../img/twitter.png" target="_blank" class="hero-twitter">
-                            <img src="" alt="twitter">
+                        <a href="#" target="_blank">
+                            <img src="../img/twitter.png" alt="twitter" class="hero-twitter">
                         </a>
                     </li>
                     <li class="hero-item">
-                        <a href="../img/youtube.png" target="_blank" class="hero-youtube">
-                            <img src="" alt="youtube">
+                        <a href="#" target="_blank">
+                            <img src="../img/youtube.png" alt="youtube" class="hero-youtube">
                         </a>
                     </li>
                 </div>
