--- a/pages/second.html
+++ b/pages/second.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container head-box">
         <a href="../index.html" >
             <img src="../img/avatar.png" alt="logo" class="header-logo">
         </a>
@@ -43,6 +43,7 @@
     <main>
         <section class="hero">
             <div class="container">
+                <div class="hero-box">
             <h1 class="hero-title">Oe perlltxe hu tsamsiyu!
                 Ngari hu Eywa salew tirea, 
                 tokx 'ì'awn slu Na'viyä hapxì.
@@ -55,6 +56,8 @@
                     <button class="hero-button">
                         <a href="" class="hero-link">Join clan</a>
                     </button>
+                </div>
+                <ul class="hero-list">
                     <li class="hero-item">
                         <a href="#" target="_blank">
                             <img src="../img/inst.png" alt="instagram" class="hero-instagram">
@@ -70,6 +73,7 @@
                             <img src="../img/youtube.png" alt="youtube" class="hero-youtube">
                         </a>
                     </li>
+                </ul>
                 </div>
         </section>
 
@@ -86,7 +90,7 @@
             <div class="container">
                 <div class="girl-background">
             <button type="button" class="girl-button">
-                <a href="" class="girl-link">WATCH TRAILER</a>
+                WATCH TRAILER
             </button>
         </div>
         </div>
@@ -107,34 +111,46 @@
             <h1 class="navi-title">Let's learn the Na'vi language</h1>
             <ul class="navi-list">
             <li class="navi-item">
+                <div class="navi-div">
                 <h2 class="navi-caption">Hello</h2>
-                <img src="../img/egle.png" alt="" class="egle-img">
+                <img src="../img/egle.png" alt="" class="navi-img">
                 <p class="navi-text">Kaltxì</p>
+            </div>
             </li>
             <li class="navi-item">
+                <div class="navi-div">
                 <h2 class="navi-caption">How Are You?</h2>
-                <img src="../img/egle.png" alt="" class="egle-img">
+                <img src="../img/egle.png" alt="" class="navi-img">
                 <p class="navi-text">Ngaru lu fpom srak?</p>
+            </div>
             </li>
             <li class="navi-item">
+                <div class="navi-div">
                 <h2 class="navi-caption">I'm Well</h2>
-                <img src="../img/egle.png" alt="" class="egle-img">
+                <img src="../img/egle.png" alt="" class="navi-img">
                 <p class="navi-text">Lu fpom</p>
+            </div>
             </li>
             <li class="navi-item">
+                <div class="navi-div">
                 <h2 class="navi-caption">Thank you</h2>
-                <img src="../img/egle.png" alt="" class="egle-img">
+                <img src="../img/egle.png" alt="" class="navi-img">
                 <p class="navi-text">Irayo si </p>
+            </div>
             </li>
             <li class="navi-item">
+                <div class="navi-div">
                 <h2 class="navi-caption">I See You</h2>
-                <img src="../img/egle.png" alt="" class="egle-img">
+                <img src="../img/egle.png" alt="" class="navi-img">
                 <p class="navi-text">Oel ngati kameie</p>
+            </div>
             </li>
             <li class="navi-item">
+                <div class="navi-div">
                 <h2 class="navi-caption">Follow me!</h2>
-                <img src="../img/egle.png" alt="" class="egle-img">
+                <img src="../img/egle.png" alt="" class="navi-img">
                 <p class="navi-text">Nong oet!</p>
+            </div>
             </li>
             </ul>
         </div>
@@ -150,15 +166,24 @@
         </section>
     </div>
     </main>
-    <footer class="footer">
-        <a href="../img/avatar.png" target="_blank">
-            <img src="logo.png" alt="логотип" class="logo">
-        </a>
-        <p class="footer-text">Q&A E-mail</p>
-        <a href="mailto:avatartwowqa@gmail.com" class="footer-email">avatartwowqa@gmail.com</a>
-        <p class="footer-text">Cooperation E-mail</p>
-        <a href="mailto:avatartwowcoop@gmail.com" class="footer-email">avatartwowcoop@gmail.com</a>
-        <p>©2023 Avatar: The Way Of Water. All rights reserved</p>
+    <footer class="footer footer-box">
+        <div class="container">
+        <a href="../index.html" target="_blank">
+            <img src="../img/avatar.png" alt="логотип" class="footer-logo">
+            <nav class="footer-nav">
+                <ul class="footer-list">
+                    <li class="footer-item">
+                        <p class="footer-text">Q&A E-mail-----------avatartwowqa@gmail.com</p>
+                    </li>
+                    <li class="footer-item">
+                        <p class="footer-text">Cooperatio E-mail--------avatartwowcoop@gmail.com</p>
+                    </li>
+                    <li class="footer-item">
+                        <p class="footer-text">©2023 Avatar: The Way Of Water. All rights reserved</p>
+                    </li>
+                </ul>
+    </nav>
+    </div>
     </footer>
 </body>
 </html>
