--- a/pages/second.html
+++ b/pages/second.html
@@ -48,6 +48,7 @@
                 Ngari hu Eywa salew tirea, 
                 tokx 'ì'awn slu Na'viyä hapxì.
                 Säwem nìayoeng!</h1>
+                <img src="../img/strila.png" alt="" class="hero-img">
                 <h2 class="hero-title">I'm speaking with the warrior!
                     Your spirit goes with Eywa, 
                     your body stays behind to 
@@ -113,7 +114,7 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Hello</h2>
-                <img src="../img/egle.png" alt="" class="navi-img">
+                <img src="../img/strila.png" alt="" class="navi-img">
                 <p class="navi-text">Kaltxì</p>
             </div>
             </li>
@@ -127,14 +128,14 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">I'm Well</h2>
-                <img src="../img/egle.png" alt="" class="navi-img">
+                <img src="../img/strila.png" alt="" class="navi-img">
                 <p class="navi-text">Lu fpom</p>
             </div>
             </li>
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Thank you</h2>
-                <img src="../img/egle.png" alt="" class="navi-img">
+                <img src="../img/strila.png" alt="" class="navi-img">
                 <p class="navi-text">Irayo si </p>
             </div>
             </li>
@@ -148,7 +149,7 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Follow me!</h2>
-                <img src="../img/egle.png" alt="" class="navi-img">
+                <img src="../img/strila.png" alt="" class="navi-img">
                 <p class="navi-text">Nong oet!</p>
             </div>
             </li>
@@ -166,10 +167,12 @@
         </section>
     </div>
     </main>
-    <footer class="footer footer-box">
-        <div class="container">
+    <footer class="footer">
+        <div class="container footer-box">
         <a href="../index.html" target="_blank">
             <img src="../img/avatar.png" alt="логотип" class="footer-logo">
+        </a>
+            <div class="footer-line"></div>
             <nav class="footer-nav">
                 <ul class="footer-list">
                     <li class="footer-item">
