--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 Ngari hu Eywa salew tirea, 
                 tokx 'ì'awn slu Na'viyä hapxì.
                 Säwem nìayoeng!</h1>
+                <img src="./img/strila.png" alt="" class="hero-img">
                 <h2 class="hero-title">Хоробрий воїне, звертаюсь до тебе!
                     Твій дух йде з Ейвою, 
                     твоє тіло залишається, 
@@ -111,7 +112,7 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Привіт</h2>
-                <img src="./img/egle.png" alt="" class="navi-img">
+                <img src="./img/strila.png" alt="" class="navi-img">
                 <p class="navi-text">Kaltxì</p>
             </div>
             </li>
@@ -125,14 +126,14 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Все добре</h2>
-                <img src="./img/egle.png" alt="" class="navi-img">
+                <img src="./img/strila.png" alt="" class="navi-img">
                 <p class="navi-text">Lu fpom</p>
             </div>
             </li>
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Дякую</h2>
-                <img src="./img/egle.png" alt="" class="navi-img">
+                <img src="./img/strila.png" alt="" class="navi-img">
                 <p class="navi-text">Irayo si </p>
             </div>
             </li>
@@ -146,7 +147,7 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Слідуй за мною!</h2>
-                <img src="./img/egle.png" alt="" class="navi-img">
+                <img src="./img/strila.png" alt="" class="navi-img">
                 <p class="navi-text">Nong oet!</p>
             </div>
             </li>
@@ -163,18 +164,19 @@
         </div>
         </section>
     </main>
-    <footer class="footer footer-box">
-        <div class="container">
+    <footer class="footer">
+        <div class="container footer-box">
         <a href="./index.html" target="_blank">
             <img src="./img/avatar.png" alt="логотип" class="footer-logo">
         </a>
+        <div class="footer-line"></div>
         <nav class="footer-nav">
             <ul class="footer-list">
                 <li class="footer-item">
-                    <p class="footer-text">Q&A E-mail-----------avatartwowqa@gmail.com</p>
+                    <p class="footer-text">Q&A E-mail--------------------------avatartwowqa@gmail.com</p>
                 </li>
                 <li class="footer-item">
-                    <p class="footer-text">Cooperatio E-mail--------avatartwowcoop@gmail.com</p>
+                    <p class="footer-text">Cooperatio E-mail-------------------avatartwowcoop@gmail.com</p>
                 </li>
                 <li class="footer-item">
                     <p class="footer-text">©2023 Avatar: The Way Of Water. All rights reserved</p>
