--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 <a href="./index.html" class="nav-link">Контакти</a>
             </li>
             <li>
-                <button class="nav-button"> <a href="#" class="nav-href">Увійти</a> </button>
+                <button type="button" class="nav-button">
+                    Увійти
+                </button>
             </li>
             <li class="nav-item">
                 <a href="./pages/second.html" class="language-link">ENG</a>
@@ -56,8 +58,10 @@
                     щоб стати частиною Народу.
                     Борись разом з нами!</h2>
                     <button class="hero-button">
-                        <a href="#" class="hero-link">Приєднатися до клану</a>
+                        Приєднатися до клану
                     </button>
+
+                    
                 </div>
                 <ul class="hero-list">
                     <li class="hero-item">
