--- a/pages/second.html
+++ b/pages/second.html
@@ -28,12 +28,13 @@
             <li class="nav-item">
                 <a href="./index.html" class="nav-link">Contacts</a>
             </li>
-            <button class="nav-button"><a href="#" class="nav-href">Log In</a></button>
-           
+            <button type="button" class="nav-button">
+                Log In
+            </button>
             <li class="nav-item">
                 <a href="../pages/second.html" class="language-link">ENG</a>
             </li>
-            <li class="nav">
+            <li class="nav"> 
                 <a href="../index.html" class="language-link">UA</a>
             </li>
         </ul>
@@ -54,9 +55,10 @@
                     your body stays behind to 
                     become part of the People.
                     Fight with us!</h2>
-                    <button class="hero-button">
-                        <a href="" class="hero-link">Join clan</a>
+                    <button type="button" class="hero-button">
+                        Join clan
                     </button>
+
                 </div>
                 <ul class="hero-list">
                     <li class="hero-item">
@@ -80,10 +82,10 @@
 
         <section class="egle">
             <div class="container">
-                <h1 class="egle-title">“A LOT OF PEOPLE FROM THE SKY ARE GONNA COME. THEY’RE</h1>
-                <h2 class="egle-title">GONNA COME LIKE A RAIN THAT NEVER ENDS.”</p>
+                <h1 class="egle-title">“A LOT OF PEOPLE FROM THE SKY ARE GONNA COME. THEYRE</h1>
+                <h2 class="egle-title">GONNA COME LIKE A RAIN THAT NEVER ENDS.”</h2>
                 <p class="egle-text">JAKE SULLY</p>
-                <img src="../img/egle.png" alt="" class="egle-img" class="egle-img">
+                <img src="../img/egle.png" alt="" class="egle-img">
             </div>
         </section>
 
@@ -164,8 +166,8 @@
             <h2 class="citata-title">SHE PROTECTS ONLY THE BALANCE OF LIFE.”</h2>
             <p class="citata-text">NEYTIRI</p>
             <img src="../img/egle.png" alt="" class="egle-img">
+        </div>
         </section>
-    </div>
     </main>
     <footer class="footer">
         <div class="container footer-box">
