--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="container"> 
             <h1 class="citata-title">“ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ</h1>
             <h2 class="citata-title">ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”</h2>
-            <p class="citata-text">Нейтірі</p>
+            <p class="citata-text">Джейк Саллі</p>
             <img src="./img/egle.png" alt="" class="egle-img">
         </div>
         </section>
