--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Привіт</h2>
-                <img src="./img/strila.png" alt="" class="navi-img">
+                <img src="./img/strilaleft.png" alt="" class="navi-img">
                 <p class="navi-text">Kaltxì</p>
             </div>
             </li>
@@ -130,14 +130,14 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Все добре</h2>
-                <img src="./img/strila.png" alt="" class="navi-img">
+                <img src="./img/strilaright.png" alt="" class="navi-img">
                 <p class="navi-text">Lu fpom</p>
             </div>
             </li>
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Дякую</h2>
-                <img src="./img/strila.png" alt="" class="navi-img">
+                <img src="./img/strilaleft.png" alt="" class="navi-img">
                 <p class="navi-text">Irayo si </p>
             </div>
             </li>
@@ -151,7 +151,7 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Слідуй за мною!</h2>
-                <img src="./img/strila.png" alt="" class="navi-img">
+                <img src="./img/strilaright.png" alt="" class="navi-img">
                 <p class="navi-text">Nong oet!</p>
             </div>
             </li>
