--- a/pages/second.html
+++ b/pages/second.html
@@ -116,7 +116,7 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Hello</h2>
-                <img src="../img/strila.png" alt="" class="navi-img">
+                <img src="../img/strilaleft.png" alt="" class="navi-img">
                 <p class="navi-text">Kaltxì</p>
             </div>
             </li>
@@ -130,14 +130,14 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">I'm Well</h2>
-                <img src="../img/strila.png" alt="" class="navi-img">
+                <img src="../img/strilaright.png" alt="" class="navi-img">
                 <p class="navi-text">Lu fpom</p>
             </div>
             </li>
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Thank you</h2>
-                <img src="../img/strila.png" alt="" class="navi-img">
+                <img src="../img/strilaleft.png" alt="" class="navi-img">
                 <p class="navi-text">Irayo si </p>
             </div>
             </li>
@@ -151,7 +151,7 @@
             <li class="navi-item">
                 <div class="navi-div">
                 <h2 class="navi-caption">Follow me!</h2>
-                <img src="../img/strila.png" alt="" class="navi-img">
+                <img src="../img/strilaright.png" alt="" class="navi-img">
                 <p class="navi-text">Nong oet!</p>
             </div>
             </li>
