--- a/index.html
+++ b/index.html
@@ -65,18 +65,25 @@
                 </div>
                 <ul class="hero-list">
                     <li class="hero-item">
-                        <a href="https://www.instagram.com/" target="_blank" >
-                            <img src="./img/inst.png" alt="інстраграм" class="hero-instagram">
+                        <a href="https://www.instagram.com/" target="_blank" > <svg class="hero-icon">
+                            <use href="./img/symbol-defs.svg#icon-inst"></use>
+                        </svg>
+                            <!-- <img src="./img/inst.png" alt="інстраграм" class="hero-instagram"> -->
                         </a>
                     </li>
                     <li class="hero-item">
                         <a href="#" target="_blank">
-                            <img src="./img/twitter.png" alt="твітер" class="hero-twitter">
+                            <svg class="hero-icon">
+                                <use href="./img/symbol-defs.svg"></use>
+                            </svg>
                         </a>
                     </li>
                     <li class="hero-item">
                         <a href="#" target="_blank">
-                            <img src="./img/youtube.png" alt="ютуб" class="hero-youtube">
+                            <!-- <img src="./img/youtube.png" alt="ютуб" class="hero-youtube"> -->
+                            <svg class="hero-icon">
+                                <use href=""></use>
+                            </svg>
                         </a>
                     </li>
                 </ul>
