--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <li class="hero-item">
                         <a href="#" target="_blank">
                             <svg class="hero-icon">
-                                <use href="./img/symbol-defs.svg"></use>
+                                <use href="./img/symbol-defs.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
@@ -82,7 +82,7 @@
                         <a href="#" target="_blank">
                             <!-- <img src="./img/youtube.png" alt="ютуб" class="hero-youtube"> -->
                             <svg class="hero-icon">
-                                <use href=""></use>
+                                <use href="./img/symbol-defs.svg#icon-youtube"></use>
                             </svg>
                         </a>
                     </li>
