--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Headland+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,18 +20,18 @@
     <header class="header">
         <div class="container head-box">
         <a href="./index.html">
-            <img src="./img/avatar.png" alt="логотип" class="header-logo">
+            <img src="./img/avatar.png" alt="логотип" class="header-logo animate__animated animate__fadeInLeft">
         </a>
         <nav class="header-nav">
             <ul class="nav-list">
             <li class="nav-item">
-                <a href="./index.html" class="nav-link">Головна</a>
+                <a href="./index.html" class="nav-link animate__animated animate__rotateIn">Головна</a>
             </li>
             <li class="nav-item">
-                <a href="./index.html" class="nav-link">Про нас</a>
+                <a href="./index.html" class="nav-link animate__animated animate__rotateIn">Про нас</a>
             </li>
             <li class="nav-item">
-                <a href="./index.html" class="nav-link">Контакти</a>
+                <a href="./index.html" class="nav-link animate__animated animate__rotateIn">Контакти</a>
             </li>
             <li>
                 <button type="button" class="nav-button">
@@ -34,10 +39,10 @@
                 </button>
             </li>
             <li class="nav-item">
-                <a href="./pages/second.html" class="language-link">ENG</a>
+                <a href="./pages/second.html" class="language-link animate__animated animate__rotateIn">ENG</a>
             </li>
             <li class="nav-item">
-                <a href="./index.html" class="language-link">UA</a>
+                <a href="./index.html" class="language-link animate__animated animate__rotateIn">UA</a>
             </li>
         </ul>
         </nav>
@@ -47,38 +52,38 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-box">
-            <h1 class="hero-title">Oe perlltxe hu tsamsiyu!
+            <h1 class="hero-title animate__animated animate__flash">Oe perlltxe hu tsamsiyu!
                 Ngari hu Eywa salew tirea, 
                 tokx 'ì'awn slu Na'viyä hapxì.
                 Säwem nìayoeng!</h1>
                 <img src="./img/strila.png" alt="" class="hero-img">
-                <h2 class="hero-title">Хоробрий воїне, звертаюсь до тебе!
+                <h2 class="hero-title animate__animated animate__flash">Хоробрий воїне, звертаюсь до тебе!
                     Твій дух йде з Ейвою, 
                     твоє тіло залишається, 
                     щоб стати частиною Народу.
                     Борись разом з нами!</h2>
-                    <button class="hero-button">
+                    <button class="hero-button animate__animated animate__fadeInUp">
                         Приєднатися до клану
                     </button>
 
                     
                 </div>
                 <ul class="hero-list">
-                    <li class="hero-item">
+                    <li class="hero-item animate__animated animate__bounceInRight">
                         <a href="https://www.instagram.com/" target="_blank" > <svg class="hero-icon">
                             <use href="./img/symbol-defs.svg#icon-inst"></use>
                         </svg>
                             <!-- <img src="./img/inst.png" alt="інстраграм" class="hero-instagram"> -->
                         </a>
                     </li>
-                    <li class="hero-item">
+                    <li class="hero-item animate__animated animate__bounceInRight" >
                         <a href="#" target="_blank">
                             <svg class="hero-icon">
                                 <use href="./img/symbol-defs.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="hero-item">
+                    <li class="hero-item animate__animated animate__bounceInRight" >
                         <a href="#" target="_blank">
                             <!-- <img src="./img/youtube.png" alt="ютуб" class="hero-youtube"> -->
                             <svg class="hero-icon">
@@ -95,13 +100,13 @@
                 <h1 class="egle-title">“БАГАТО ЛЮДЕЙ З НЕБА ПРИЙДЕ. ВОНИ</h1>
                 <h2 class="egle-title">ПРИЙДУТЬ, ЯК ГРОЗА, ЯКА НІКОЛИ НЕ ЗАКІНЧУЄТЬСЯ.”</h2>
                 <p class="egle-text">Джейк Саллі</p>
-                <img src="./img/egle.png" alt="" class="egle-img">
+                <img src="./img/egle.png" alt="" class="egle-img" data-aos="zoom-in-down">
             </div>
         </section>
 
         <section class="girl">
             <div class="container">
-            <button type="button" class="girl-button">
+            <button type="button" class="girl-button" data-aos="flip-right">
                 Дивитись трейлер
             </button>
         </div>
@@ -112,7 +117,7 @@
             <h1 class="citata-title">“ВСЯ ЕНЕРГІЯ ЛИШЕ ЗАПОЗИЧЕНА, ОДНОГО ДНЯ</h1>
             <h2 class="citata-title">ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”</h2>
             <p class="citata-text">Джейк Саллі</p>
-            <img src="./img/egle.png" alt="" class="egle-img">
+            <img src="./img/egle.png" alt="" class="egle-img" data-aos="zoom-in-down">
         </div>
         </section>
 
@@ -121,42 +126,42 @@
             <h1 class="navi-title">Вчимо мову На’ві</h1>
             <ul class="navi-list">
             <li class="navi-item">
-                <div class="navi-div">
+                <div class="navi-div" data-aos="fade-right">
                 <h2 class="navi-caption">Привіт</h2>
                 <img src="./img/strilaleft.png" alt="" class="navi-img">
                 <p class="navi-text">Kaltxì</p>
             </div>
             </li>
             <li class="navi-item">
-                <div class="navi-div">
+                <div class="navi-div" data-aos="fade-right">
                 <h2 class="navi-caption">Як справи?</h2>
                 <img src="./img/egle.png" alt="" class="navi-img">
                 <p class="navi-text">Ngaru lu fpom srak?</p>
             </div>
             </li>
             <li class="navi-item">
-                <div class="navi-div">
+                <div class="navi-div" data-aos="fade-right">
                 <h2 class="navi-caption">Все добре</h2>
                 <img src="./img/strilaright.png" alt="" class="navi-img">
                 <p class="navi-text">Lu fpom</p>
             </div>
             </li>
             <li class="navi-item">
-                <div class="navi-div">
+                <div class="navi-div" data-aos="fade-right">
                 <h2 class="navi-caption">Дякую</h2>
                 <img src="./img/strilaleft.png" alt="" class="navi-img">
                 <p class="navi-text">Irayo si </p>
             </div>
             </li>
             <li class="navi-item">
-                <div class="navi-div">
+                <div class="navi-div" data-aos="fade-right">
                 <h2 class="navi-caption">Я бачу тебе</h2>
                 <img src="./img/egle.png" alt="" class="navi-img">
                 <p class="navi-text">Oel ngati kameie</p>
             </div>
             </li>
             <li class="navi-item">
-                <div class="navi-div">
+                <div class="navi-div" data-aos="fade-right">
                 <h2 class="navi-caption">Слідуй за мною!</h2>
                 <img src="./img/strilaright.png" alt="" class="navi-img">
                 <p class="navi-text">Nong oet!</p>
@@ -171,7 +176,7 @@
             <h1 class="citata-title">“НАША ВЕЛИКА МАТИ НЕ СТАЄ НА ЯКУСЬ СТОРОНУ,</h1>
             <h2 class="citata-title">ВОНА ЗАХИЩАЄ ЛИШЕ ЖИТТЄВИЙ БАЛАНС.”</h2>
             <p class="citata-text">Нейтірі</p>
-            <img src="./img/egle.png" alt="" class="egle-img">
+            <img src="./img/egle.png" alt="" class="egle-img" data-aos="zoom-in-down">
         </div>
         </section>
     </main>
@@ -196,5 +201,9 @@
         </nav>
     </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
